투네이션 및 네오포지 추가 및 위플랩, 유튜브 기본 베이스 작업 1.4.0